fix(ui): terminal glitch on overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -62,6 +62,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+
+  &__hud {
+    padding-top: 2vh;
     gap: 2vh 0;
   }
 
